--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,19 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
+    "@createnextapp/react-barcode": "^1.1.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bwip-js": "^3.0.4",
     "framer-motion": "^6.2.9",
+    "nanoid": "^3.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "stream": "^0.0.2",
