--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "bwip-js": "^3.0.4",
+    "canvas": "^2.9.1",
     "concurrently": "^7.1.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
+    "jsbarcode": "^3.11.5",
     "jsonwebtoken": "^8.5.1",
+    "mongo-objectid": "^1.2.2",
     "mongoose": "^6.2.10",
+    "nanoid": "^3.3.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "stream": "^0.0.2",
