--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "app.js",
   "author": "raziq",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "nodemon Backend/server.js",
     "server": "nodemon Backend/server.js",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\""
-  },
+    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    },
   "dependencies": {
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
