--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "nodemon Backend/server.js",
-    "server": "nodemon Backend/server.js",
+    "start": "node Backend/server.js",
+    "server": "node Backend/server.js",
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -35,7 +35,9 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "stream": "^0.0.2",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "symbology": "^3.0.8",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
