--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "stream": "^0.0.2",
     "util": "^0.12.4",
     "symbology": "^3.0.8",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "nodemon": "^2.0.15"
+
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
