--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-    },
+  },
   "dependencies": {
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
@@ -33,14 +33,13 @@
     "mongo-objectid": "^1.2.2",
     "mongoose": "^6.2.10",
     "nanoid": "^3.3.2",
+    "nodemon": "^2.0.15",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "stream": "^0.0.2",
-    "util": "^0.12.4",
     "symbology": "^3.0.8",
-    "uuid": "^8.3.2",
-    "nodemon": "^2.0.15"
-
+    "util": "^0.12.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
