last commit heroku

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "author": "raziq",
   "license": "ISC",
+  "type": "module",
  
   "scripts": {
     "start": "node Backend/server.js",
