--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bwip-js": "^3.0.4",
-    "framer-motion": "^6.2.9",
+    "chart.js": "^3.7.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "stream": "^0.0.2",
