socket-io setup

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "bcrypt": "^5.0.1",
     "bwip-js": "^3.0.4",
     "canvas": "^2.9.1",
+    "colors": "^1.4.0",
     "concurrently": "^7.1.0",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -34,6 +36,7 @@
     "nodemon": "^2.0.15",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
+    "socket.io": "^4.4.1",
     "stream": "^0.0.2",
     "symbology": "^3.0.8",
     "util": "^0.12.4",
