--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.1",
     "stream": "^0.0.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
