--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "logger": "^0.0.1",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.8",
     "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
     "stream": "^0.0.2",
