--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.0.1",
     "bwip-js": "^3.0.4",
     "canvas": "^2.9.1",
+    "cloudinary": "^1.29.0",
     "colors": "^1.4.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "express-async-handler": "^1.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "image-downloader": "^4.3.0",
     "jsbarcode": "^3.11.5",
     "jsonwebtoken": "^8.5.1",
     "mongo-objectid": "^1.2.2",
