week 3 commit Billing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "@createnextapp/react-barcode": "^1.1.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,13 +18,18 @@
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "jsbarcode": "^3.11.5",
     "logger": "^0.0.1",
+    "material-table": "^1.63.0",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-to-pdf": "^0.0.14",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
@@ -39,7 +47,8 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
