--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "bwip-js": "^3.0.4",
-    "canvas": "^2.9.1",
+    "canvas": "^2.9.0",
+    "canvas-constructor": "^5.0.2",
     "cloudinary": "^1.29.0",
     "colors": "^1.4.0",
     "concurrently": "^7.1.0",
+    "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.3.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "image-downloader": "^4.3.0",
@@ -34,10 +38,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongo-objectid": "^1.2.2",
     "mongoose": "^6.2.10",
+    "multer": "^1.4.4",
     "nanoid": "^3.3.2",
     "nodemon": "^2.0.15",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.3.0",
+    "skia-canvas": "^0.9.29",
     "socket.io": "^4.4.1",
     "stream": "^0.0.2",
     "symbology": "^3.0.8",
