ladger book and settting Page all updation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.35.3",
     "bwip-js": "^3.0.4",
     "chart.js": "^3.7.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "jsbarcode": "^3.11.5",
+    "jszip": "^3.10.0",
+    "jszip-utils": "^0.1.0",
     "logger": "^0.0.1",
-    "material-table": "^1.63.0",
+    "material-table": "^1.69.3",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
