--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "dependencies": {
+    "@material-table/exporters": "^1.0.12",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -41,6 +42,7 @@
     "multer": "^1.4.4",
     "nanoid": "^3.3.2",
     "nodemon": "^2.0.15",
+    "request": "^2.88.2",
     "skia-canvas": "^0.9.29",
     "socket.io": "^4.4.1",
     "stream": "^0.0.2",
