--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "ISC",
   "type": "commonjs",
   "engines": {
-    "npm": ">=6.0.0",
-    "node": ">=10.0.0"
+    "npm": ">=8.11.0",
+    "node": ">=16.x"
   },
 
 
