--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "ISC",
   "type": "commonjs",
   "engines": {
-    "npm": ">=8.11.0",
-    "node": ">=16.x"
+    "npm": ">=8.1.2",
+    "node": ">=v16.13.2"
   },
 
 
