--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "raziq",
   "license": "ISC",
   "type": "commonjs",
-
-
-
+  "engines": {
+    "node": "16.x",
+    "npm": "6.x"
+  },
   "scripts": {
     "start": "node Backend/server.js",
     "start:dev": "nodemon Backend/server.js",
