--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
     "stream": "^0.0.2",
+    "sweetalert2": "^11.4.24",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
