--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-simple-invoice": "^1.0.14",
     "react-to-pdf": "^0.0.14",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
